# hybrid-tag-nrf5-sdk

./: .gitignore  main.c
pca10028/s130/armgcc/: Makefile  ble_app_beacon_gcc_nrf51.ld
pca10028/s130/config/: sdk_config.h
pca10040/s132/armgcc/: CMakeLists.txt  Makefile
pca10040/s132/config/: sdk_config.h
